# screen-grounded-translator

./: Cargo.toml  README.md  app.rc  build.rs  build_log.txt  check_error_gui.txt  check_error_image.txt  check_error_image_2.txt  check_final.txt  check_final3.txt  check_final_ocr.txt  check_final_refine.txt  check_final_refine_2.txt  check_font.txt  check_log.txt  check_log2.txt  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_refinement.txt  installer.nsi  test_lc.ps1
scripts/: build_cursor.rs
src/: api.rs  assistant.rs  audio_capture.rs  capture.rs  config.rs  conversation.rs  gemini_live.rs  gui.rs  history.rs  icon_gen.rs  live_captions.rs  main.rs  model_config.rs  overlay.rs
src/gui/: app.rs  icons.rs  key_mapping.rs  locale.rs  mod.rs  splash.rs
src/overlay/: assistant_overlay.rs  chat_input.rs  live_captions.rs  mod.rs  paint_utils.rs  process.rs  quick_actions.rs  recording.rs  result.rs  selection.rs  utils.rs
src/overlay/result/: mod.rs  paint.rs
