[package]
name = "screen-grounded-translator"
version = "0.5.0"
edition = "2021"

[build-dependencies]
winres = "0.1"
image = { version = "0.24", default-features = false, features = ["png"] }

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }
dirs = "5.0"
lazy_static = "1.4"
textwrap = "0.16"
open = "5.0"
sys-locale = "0.3"
winreg = "0.50"
isolang = { version = "2.0", features = ["serde", "english_names"] }
eframe = { version = "0.26", default-features = false, features = ["default_fonts", "glow"] }
tray-icon = "0.19.1"
auto-launch = "0.5" 

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"